--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #f5c267; /* Matching the navbar color */
+    background-color: #f5c267; 
     padding: 10px 20px;
     height: 60px;
   }
