--- a/src/components/Map.css
+++ b/src/components/Map.css
@@ -131,6 +131,7 @@
   font-size: 22px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   background: white;
+  color: black;
 }
 .search-input:focus {
   border: none;
@@ -147,6 +148,7 @@
   margin-top: 4px;
   max-height: 300px;
   overflow-y: auto;
+  color: black;
 }
 
 .search-result-item {
