--- a/Frontend/src/components/Dialog.css
+++ b/Frontend/src/components/Dialog.css
@@ -21,6 +21,7 @@
   width: 400px;
   max-width: 90%;
   max-height: 90vh;
+  overflow-x: hidden;
   overflow-y: auto;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
