--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -119,3 +119,10 @@ h1 {
   font-size: 12px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
 }
+
+@media screen and (max-width: 768px) {
+  .logo {
+    scale: 0.6;
+    left: 10%;
+  }
+}
