--- a/Frontend/src/components/Map.css
+++ b/Frontend/src/components/Map.css
@@ -292,3 +292,10 @@
 .carousel-slide.active {
   display: block;
 }
+
+@media screen and (max-width: 768px) {
+  .search-container {
+    width: 150px;
+    top: 10%;
+  }
+}
